--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
     <section>
         <div class="address-container">
-            <button class="running-btn">Out Partner</button>
+            <button class="running-btn">Address Name</button>
         </div>
     </section>
 
